tests/parsing/smtlib/poly/errors/144_function_dec_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/144_function_dec_unclosed_1.psmt2", line 2, character 31-32:
2 | (define-funs-rec ((foo () bool _)))
                                   ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a closing parenthesis.
